interface fixes: price now on right hand side, removed additional white space on name

--- a/public/stylesheets/sass/admin/extensions/shop/products/index.sass
+++ b/public/stylesheets/sass/admin/extensions/shop/products/index.sass
@@ -46,8 +46,8 @@
           size: 16px
         text:
           decoration: none
-          
-        &:hover
+        
+        a:hover
           color: #0066ce
           text:
             decoration: underline
@@ -57,6 +57,12 @@
           style: italic
           size: 0.9em
         color: #000000
+        
+      .price
+        position: absolute
+        right: 90px
+        font-size: 0.8em
+        font-weight: bold
           
       .modify
         float: right
